--- a/school-projects.html
+++ b/school-projects.html
@@ -186,9 +186,10 @@
 
                     </div>
                     <div class="col-sm-6">
-                        <div class="user-trigger-img "></div>
+                        <div class="user-trigger-img-top"></div>
                     </div>
                 </div>
+                <div class="spacer"></div>
                 <div class="row">
                     <div class="col-sm-6">
                         <iframe class="arduino-screaming-embed" src="arduino_screaming.html">It Looks like your browser
