begain implementing the gangl section to school projects

--- a/school-projects.html
+++ b/school-projects.html
@@ -204,16 +204,17 @@
                                 Check out the photo gallery of the completed project!
                             </p>
                             <div class="button-space">
-                                <a href="https://www.flickr.com/photos/184079531@N08/albums/72157710664499506" target="_blank">
+                                <a href="https://www.flickr.com/photos/184079531@N08/albums/72157710664499506"
+                                    target="_blank">
                                     <button class="button-des" id="screaming-button">Explore Photos</button>
                                 </a>
-                                </div>
+                            </div>
                             <p>
                                 The facts:
                                 <ul>
                                     <li>289 lines of code</li>
                                     <li>3 interrupts</li>
-                                    <li>21 hours of work</li>
+                                    <li>28 hours of work</li>
                                     <li>31 commits</li>
                                 </ul>
                             </p>
@@ -222,11 +223,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="spacer"></div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="text-container left-side" id="how-it-works">
+                            <h2 class="bc-ferries-h2">
+                                Gangl, Design Case Study
+                            </h2>
+                            <p class="why-the-safe-para">
+                                in 2017, 90% of students reported that they were stressed and overworked during their post-secondary education. the Gangl App, is a platform designed and prototyped to combat stress caused by workload in undergraduate students.
+                            </p>
+                            <p>
+                                The app was designed and prototyped using marvel design studio. the project followed the iterative design process to the book. it begain with the definition of a problem statement, identificaiton of key stakeholders and users and intensive reseach.
+                                A QFD and various other design tools were used to quantify specific aspects of the design. finally the project was iterativly designed from low fidelity, through high fidelity prototypes. It was presented as a final high fidelity prototype at the end of the term.
+                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf">Download the full report</a>.
+                            </p>
+                            <div class="button-space">
+                                <a href="https://github.com/SammyRobensParadise/arduino-screaming" target="_blank">
+                                    <button class="button-des" id="screaming-button">Check out the video</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="user-trigger-img-gangl"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-
     <div class="section-link-out">
         <div class="container">
             <div class="row">
