updated index.html to link to hootsuite and added the finger food projects page, as well as uploaded the control plus app page

--- a/school-projects.html
+++ b/school-projects.html
@@ -154,7 +154,7 @@
                     <div class="col-sm-6">
                         <div class="text-container left-side" id="how-it-works">
                             <h2 class="bc-ferries-h2">
-                                How it works
+                                How Arduino Screaming Works
                             </h2>
                             <p class="why-the-safe-para">
                                 The screaming safe uses a number of hardware and software components. The main
@@ -198,7 +198,7 @@
                     <div class="col-sm-6">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                                Photo Gallery
+                               Safe, Photo Gallery
                             </h2>
                             <p class="why-the-safe-para">
                                 Check out the photo gallery of the completed project!
@@ -236,10 +236,10 @@
                             <p>
                                 The app was designed and prototyped using marvel design studio. the project followed the iterative design process to the book. it begain with the definition of a problem statement, identificaiton of key stakeholders and users and intensive reseach.
                                 A QFD and various other design tools were used to quantify specific aspects of the design. finally the project was iterativly designed from low fidelity, through high fidelity prototypes. It was presented as a final high fidelity prototype at the end of the term.
-                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf">Download the full report</a>.
+                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf" target="_blank">View the full report</a>.
                             </p>
                             <div class="button-space">
-                                <a href="https://github.com/SammyRobensParadise/arduino-screaming" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">
                                     <button class="button-des" id="screaming-button">Check out the video</button>
                                 </a>
                             </div>
