--- a/index.html
+++ b/index.html
@@ -233,14 +233,16 @@
             </div>
             <div class=row>
                 <div class="container" id="hootsuite-container">
+                    <a href="https://hootsuite.com">
                     <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
                         <div class="hootsuite-section">
                             <h2 class="section-p">Hootsuite - Fall 2019</h2>
-                            <p class="section-p">Incomming Software Developer at Hootsuite Plan and Create Team,
+                            <p class="section-p">Incomming Software Developer at Hootsuite, Plan and Create Team,
                                 beginning
                                 September 2019!</p>
                         </div>
                     </div>
+                </a>
                 </div>
             </div>
             <div class=row>
