added the finger food studios projects section

--- a/finger-food-atg-projects.html
+++ b/finger-food-atg-projects.html
@@ -121,27 +121,39 @@
             <h1 class="display-3">Finger Food Projects</h1>
             <h1 class="display-4">Disclosable projects that I had the oppertunity to work on at Finger Food</h1>
             <div class="">
-
+                <div class="row"><div class="col-sm-12">
+                        <div class="button-space">
+                                <a id="href-a-to-sammy"
+                                    href="https://www.fingerfoodatg.com/"
+                                    target="_blank"><button class="button-des-ff" id="play-button">Explore Finger Food Studios</button></a>
+                            </div>
+                </div></div>
                 <div class="row">
                     <div class="col-sm-6">
-                            <div class="user-trigger-img"></div>
+                        <div class="user-trigger-img" onclick="getMobileOperatingSystemAndOpen(1)"></div>
                     </div>
                     <div class="col-sm-6">
                         <div class="text-container">
-                            <h2 class="bc-ferries-h2">
-                                LEGO® TECHNIC® Control+ App
+                            <h2 class="bc-ferries-h2 hov">
+                                LEGO ® TECHNIC ® Control+
                             </h2>
                             <p class="why-the-portfolio-para">
-                                The Control+ App is the first of it's kind app that bridges the gap between tech and the brick-world of LEGO.
+                                The Control+ App is the first of it's kind app that bridges the gap between tech and the
+                                brick-world of LEGO.
                             </p>
                             <p>
-                                Read the article on the <a href="https://www.lego.com/en-us/campaigns/controlplus">Control+ App</a>
+                                Read the article on the <a
+                                    href="https://www.lego.com/en-us/campaigns/controlplus">Control+ App</a>
                             </p>
                             <div class="button-space">
-                                <a id="href-a-to-sammy" href="https://play.google.com/store/apps/details?id=com.lego.technic.controlplus" target="_blank"><button
-                                        class="button-des" id="play-button">Get it on Google Play</button></a>
-                                        <a id="href-a-to-sammy" href="https://apps.apple.com/app/lego-technic-control/id1465808291" target="_blank"><button
-                                            class="button-des" id="app-button">Dowload from the App Store</button></a>
+                                <a id="href-a-to-sammy"
+                                    href="https://play.google.com/store/apps/details?id=com.lego.technic.controlplus"
+                                    target="_blank"><button class="button-des" id="play-button">Get it on Google
+                                        Play</button></a>
+                                <a id="href-a-to-sammy"
+                                    href="https://apps.apple.com/app/lego-technic-control/id1465808291"
+                                    target="_blank"><button class="button-des" id="app-button">Download from the App
+                                        Store</button></a>
                             </div>
 
                         </div>
@@ -150,7 +162,35 @@
             </div>
         </div>
     </div>
-    
+    <div class="spacer"></div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="text-container left-side" id="sphero">
+                <h2 class="bc-ferries-h2">
+                    Sphero EDU
+                </h2>
+                <p class="why-the-safe-para">
+                    Sphero EDU is the first ever educational app that delivered an app-based system to visually program sphero robots. Users can build, share and create programs to control their robots.
+                </p>
+                <p>
+                    Read Finger Food's <a href="https://www.fingerfoodatg.com/sphero/" target="_blank">case study on Sphero EDU</a>.
+                </p>
+                <div class="button-space">
+                        <a id="href-a-to-sammy"
+                            href="https://play.google.com/store/apps/details?id=com.sphero.sprk"
+                            target="_blank"><button class="button-des" id="play-button">Get it on Google
+                                Play</button></a>
+                        <a id="href-a-to-sammy"
+                            href="https://apps.apple.com/ca/app/sphero-edu/id1349872101?mt=12"
+                            target="_blank"><button class="button-des" id="app-button">Download from the App
+                                Store</button></a>
+                    </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="user-trigger-img-sphero" onclick="getMobileOperatingSystemAndOpen(2)"></div>
+        </div>
+    </div>
 
     <div class="section-link-out">
         <div class="container">
