--- a/index.html
+++ b/index.html
@@ -234,27 +234,30 @@
             <div class=row>
                 <div class="container" id="hootsuite-container">
                     <a href="https://hootsuite.com">
-                    <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
-                        <div class="hootsuite-section">
-                            <h2 class="section-p">Hootsuite - Fall 2019</h2>
-                            <p class="section-p">Incomming Software Developer at Hootsuite, Plan and Create Team,
-                                beginning
-                                September 2019!</p>
+                        <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
+                            <div class="hootsuite-section">
+                                <h2 class="section-p">Hootsuite - Fall 2019</h2>
+                                <p class="section-p">Incomming Software Developer at Hootsuite, Plan and Create Team,
+                                    beginning
+                                    September 2019!</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
                 </div>
             </div>
             <div class=row>
                 <div class="container" id="ffsatg-container">
-                    <div class="col-sm-12 work-section-ffatg" id="ffsatg-sec">
-                        <div class="ffatg-section">
-                            <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
-                            <p class="section-p">A look at my projects and contributions during my time as QA Lead at
-                                Finger
-                                Food!</p>
+                    <a href="./finger-food-atg-projects.html">
+                        <div class="col-sm-12 work-section-ffatg" id="ffsatg-sec">
+                            <div class="ffatg-section">
+                                <h2 class="section-p">Finger Food Advanced Technology Group - 2018/2019</h2>
+                                <p class="section-p">A look at my projects and contributions during my time as QA Lead
+                                    at
+                                    Finger
+                                    Food!</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class=row>
