reset the template for the me.html page and created me.js

--- a/me.html
+++ b/me.html
@@ -1,6 +1,5 @@
 <!--index.HTML DOCUMENT ___________________________-->
 <!--CREATED INDEPENDANTLY BY: SAMMY ROBENS-PARADISE-->
-<!--CURRENT AS OF: 2018-06-29______________________-->
 
 <!DOCTYPE html>
 <html>
@@ -8,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sammy Robens-Paradise</title>
+    <title>Who's Sammy | Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -26,37 +25,27 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="me.css" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
-
+    <link rel="stylesheet" type="text/css" media="screen" href="school-projects.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
-
+        </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+        </script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
+    <script src="me.js"></script>
 </head>
-<!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
 <body>
-    <!--SPLASH SCREEN-->
-
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default ">
+    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default fixed-top navigation-tag">
         <a class="navbar-brand active" href="index.html">
             Home
         </a>
@@ -71,16 +60,13 @@
                     <a class="nav-link" id="navbar_projects" href="https://sammy.world" target="_blank">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp" target="_blank">Dribbble</a>
+                    <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp"
+                        target="_blank">Dribbble</a>
                 </li>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./src/assets/resumeV16.pdf" download="Sammy Robens-Paradise Resume"
                         id="navbar_resume">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./creations.html" download="Sammy Robens-Paradise Resume"
-                        id="navbar_resume">Creations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
@@ -129,54 +115,158 @@
     <!--END OF MODAL SECTION-->
 
     <!--THE FOLLOWING SECTION IS THE LANDING PAGE-->
+    <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="center landing-text display-2">Me - Sammy Robens-Paradise</h1>
-            <div class="landing-image">
+            <h1 class="display-3">Engineering Projects, Year 1</h1>
+            <h1 class="display-4">Exploring everything from app design to digital circuits and microcontrollers</h1>
+            <div class="yeet">
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="user-trigger-img"></div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="text-container">
+                            <h2 class="bc-ferries-h2">
+                                Arduino Screaming Safe
+                            </h2>
+                            <p class="why-the-safe-para">
+                                The arduino screaming safe is, yes, safe that will only open if you scream the correct
+                                combination.
+                            </p>
+                            <p> <a href="https://github.com/SammyRobensParadise/arduino-screaming">Arduino Screaming</a>
+                                is a final project for <a href="https://uwflow.com/course/syde192" target="_blank">SYDE
+                                    192</a>.
+                                To open the safe you must "scream" at the safe at the correct times (in seconds)
+                                coresponding to the combination that you set. if the the screaming time is correct, the
+                                safe will open!
+                            </p>
+                            <div class="button-space">
+                                <button class="button-des" id="screaming-button"
+                                    onclick="scrollToEl('how-it-works',null)">Find out how it works</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="text-container left-side" id="how-it-works">
+                            <h2 class="bc-ferries-h2">
+                                How Arduino Screaming Works
+                            </h2>
+                            <p class="why-the-safe-para">
+                                The screaming safe uses a number of hardware and software components. The main
+                                components are the, Arduino UNO microcontroller, the sound sensor and the laser cut box.
+                                A full parts list can be found in the <a
+                                    href="https://github.com/SammyRobensParadise/arduino-screaming/blob/master/README.md"
+                                    target="_blank">README file</a>.
+                            </p>
+                            <p>
+                                The safe contains an arduino board that is programmed to detect a signal sent from the
+                                sound sensor whenever a sound above a specifc threshold is detected by the speaker.
+                                when a sound is detected a software interrupt <code>void sound()</code> is triggered. in
+                                the interrupt the code checks if the current time corresponds to the internal timer
+                                scaled to 30 seconds
+                                using the <code>ISR(TIMER2_OVF_vect)</code> interrupt. If the time matches, it will
+                                update the unlocked state. if all states are <code>true</code> then the safe will unlock
+                                by activating a servo motor.
+                                For more details about how the code works check out the <a
+                                    href="https://github.com/SammyRobensParadise/arduino-screaming/blob/master/README.md"
+                                    target="_blank">README file</a>.
+                            </p>
+                            <div class="button-space">
+                                <a href="https://github.com/SammyRobensParadise/arduino-screaming" target="_blank">
+                                    <button class="button-des" id="screaming-button">Check out the source code</button>
+                                </a>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="user-trigger-img-top"></div>
+                    </div>
+                </div>
+                <div class="spacer"></div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <iframe class="arduino-screaming-embed" src="arduino_screaming.html">It Looks like your browser
+                            does not support the <code>iframe tag :(</code></iframe>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="text-container">
+                            <h2 class="bc-ferries-h2">
+                               Safe, Photo Gallery
+                            </h2>
+                            <p class="why-the-safe-para">
+                                Check out the photo gallery of the completed project!
+                            </p>
+                            <div class="button-space">
+                                <a href="https://www.flickr.com/photos/184079531@N08/albums/72157710664499506"
+                                    target="_blank">
+                                    <button class="button-des" id="screaming-button">Explore Photos</button>
+                                </a>
+                            </div>
+                            <p>
+                                The facts:
+                                <ul>
+                                    <li>289 lines of code</li>
+                                    <li>3 interrupts</li>
+                                    <li>28 hours of work</li>
+                                    <li>31 commits</li>
+                                </ul>
+                            </p>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="spacer"></div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="text-container left-side" id="how-it-works">
+                            <h2 class="bc-ferries-h2">
+                                Gangl, Design Case Study
+                            </h2>
+                            <p class="why-the-safe-para">
+                                in 2017, 90% of students reported that they were stressed and overworked during their post-secondary education. the Gangl App, is a platform designed and prototyped to combat stress caused by workload in undergraduate students.
+                            </p>
+                            <p>
+                                The app was designed and prototyped using marvel design studio. the project followed the iterative design process to the book. it begain with the definition of a problem statement, identificaiton of key stakeholders and users and intensive reseach.
+                                A QFD and various other design tools were used to quantify specific aspects of the design. finally the project was iterativly designed from low fidelity, through high fidelity prototypes. It was presented as a final high fidelity prototype at the end of the term.
+                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf" target="_blank">View the full report</a>.
+                            </p>
+                            <div class="button-space">
+                                <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">
+                                    <button class="button-des" id="screaming-button">Check out the video</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="user-trigger-img-gangl"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="section-about">
+    <div class="section-link-out">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
-                    <div class="card" style="width: 100%;">
-                        <img class="card-img-top" src="./src/assets/head_shot.png" alt="Card image cap">
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <p class="lead" style="color:#fff">As someone who advocates optimized engineering solutions, I
-                        continue on my journey to find the most eloquent and beautiful solutions to the worlds most
-                        challening problems. I have always taken an interest in the way humans interact with technology,
-                        and more specifically, the way it shapes our experiences.</p>
-                    <p class="lead"> I chose to study Systems Design Engineering because of my fascination with the way
-                        one user's experience of a product or service can shape their understanding of the world, and
-                        more specifically, the unique impact of that understanding.</p>
-                    <br>
-                    <div class="row">
-                        <div class="col-sm-3 text-center">
-                            <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
-                        </div>
-                        <div class="col-sm-3 text-center">
-                            <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
-                        </div>
-                        <div class="col-sm-3 text-center">
-                            <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank"
-                                class="fa fa-linkedin"></a>
-                        </div>
-                        <div class="col-sm-3 text-center">
-                            <a href="https://github.com/SammyRobensParadise/" target="_blank" class="fa fa-github"></a>
-                        </div>
-                    </div>
+                <div class="col-sm-12">
+                    <p class="section-p cp"> <b>©</b> Sammy Robens-Paradise 2019 | <a
+                            href="mailto:srobensparradise@gmail.com">srobensparadise@gmail.com</a></p>
+                    <p class="section-p cp">Last updated: <lastupdated id="last-updated"></lastupdated>
+                    </p>
                 </div>
             </div>
         </div>
-
-
-
-        <!--THIS IS THE FOOTER SECTION OPF THE WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-        <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-        <div class="bottom-padding"></div>
+    </div>
+    <div class="bottom-padding"></div>
+    <script src="me.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
 </body>
 
 </html>
