--- a/index.html
+++ b/index.html
@@ -262,13 +262,15 @@
             </div>
             <div class=row>
                 <div class="container" id="eccc-container">
+                    <a href="https://www.canada.ca/en/environment-climate-change/corporate/mandate.html">
                     <div class="col-sm-12 work-section-eccc" id="eccc-sec">
                         <div class="eccc-section">
                             <h2 class="section-p">Environment and Climate Change Canada - Winter 2018</h2>
-                            <p class="section-p">Get a sneak peek into the thought and software infrastructure behind
+                            <p class="section-p">Worked on the software infrastructure behind
                                 Canada's Climate battle!</p>
                         </div>
                     </div>
+                </a>
                 </div>
             </div>
         </div>
