contiuned updating the me.html page

--- a/me.html
+++ b/me.html
@@ -118,8 +118,8 @@
     <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="display-3">Engineering Projects, Year 1</h1>
-            <h1 class="display-4">Exploring everything from app design to digital circuits and microcontrollers</h1>
+            <h1 class="display-3">Sammy Robens-Paradise</h1>
+            <h1 class="display-4">Systems Design, UX design, UI design and other nonsense</h1>
             <div class="yeet">
 
                 <div class="row">
